infrastructure/services/dev/dev-platform/policies/tests/services-pvcs/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: services-pvcs
policies:
- ../../services-pvcs.yaml
resources:
- resources.yaml
variables: ../values.yaml
results:
- isValidatingPolicy: true
  kind: Service
  policy: dev-services
  resources:
  - dev-platform/vcluster
  - dev-platform/web
  result: pass
- isValidatingPolicy: true
  kind: Service
  policy: dev-services
  resources:
  - dev-platform/lb-no-class
  - dev-platform/lb-wrong-name
  - dev-platform/nodeport
  - dev-platform/external-ips
  result: fail
- isValidatingPolicy: true
  kind: PersistentVolumeClaim
  policy: dev-pvcs
  resources:
  - dev-platform/data
  result: pass
- isValidatingPolicy: true
  kind: PersistentVolumeClaim
  policy: dev-pvcs
  resources:
  - dev-platform/data-ssd
  - dev-platform/data-default
  result: fail
