infrastructure/services/dev/dev-platform/policies/tests/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaces:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: dev-platform
    labels:
      eliorion.fr/tier: dev
- apiVersion: v1
  kind: Namespace
  metadata:
    name: dev-bare
    labels:
      eliorion.fr/tier: dev
